[package]
name = "raytracing_in_one_weekend"
version = "0.1.0"
authors = ["akinnane <17098249+akinnane@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "*"
rayon = "*"
show-image = {version = "*", features =  ["save"]}
pbr = "*"
